discussion/kv_engine/169029/169029_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Log exceptions from OneShotTask::run as Critical

One-shot tasks are expected not to throw any exceptions when
invoked. We log these and attempt to keep the system running (to avoid
say taking down other buckets unrelated to this task), but only log
the issue as a warning.

Upgrade to critical to make such issues more visible.

Change-Id: Iec2e661ac2814ec659f4ff13b564b3c45b0e60bd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-19 14:18:02.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-19 14:35:53.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14946/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:36:11: error: member initializer "name" does not name a non-static data member or base class [clang-diagnostic-error]
          name(std::move(name)),
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:37:11: error: member initializer "function" does not name a non-static data member or base class [clang-diagnostic-error]
          function(std::move(function)),
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:38:11: error: member initializer "expectedRuntime" does not name a non-static data member or base class [clang-diagnostic-error]
          expectedRuntime(std::move(expectedRuntime)) {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:41:16: error: use of undeclared identifier "name" [clang-diagnostic-error]
        return name;
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:44:16: error: reference to non-static member function must be called [clang-diagnostic-error]
        return expectedRuntime;
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:44:16: error: use of undeclared identifier "expectedRuntime"; did you mean "updateRuntime"? [clang-diagnostic-error]
        return expectedRuntime;
               ^~~~~~~~~~~~~~~
               updateRuntime
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/globaltask.h:200:10: note: "updateRuntime" declared here
    void updateRuntime(std::chrono::steady_clock::duration tp) {
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:50:13: error: use of undeclared identifier "function" [clang-diagnostic-error]
            function();
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:51:44: error: expected ";" after class [clang-diagnostic-error]
        } catch (const std::exception& e) {
                                           ^
                                           ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:51:44: error: expected "}" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:51:43: note: to match this "{"
        } catch (const std::exception& e) {
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:52:13: error: unterminated function-like macro invocation [clang-diagnostic-error]
            LOG_CRITICAL((R"(OneShotTask::run("{}") received exception: {})",
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:179:9: note: macro "LOG_CRITICAL" defined here
#define LOG_CRITICAL(...) \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:63:3: error: expected "}" [clang-diagnostic-error]
};
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:21:39: note: to match this "{"
class OneShotTask : public GlobalTask {
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14946/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/one_shot_task.h:36:11:
error: member initializer "name" does not name a non-static data member or base class [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14946/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42985/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\daemon/one_shot_task.h(52): fatal error C1057: unexpected end of file in macro expansion ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42985/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36402/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/cluster_config_executor.cc:17:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15755/ : FAILURE

Compile error at [2022-01-19T14:32:26.217Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@4/kv_engine/daemon/protocol/mcbp/sasl_refresh_command_context.cc:17:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15755/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4591/ : FAILURE

Compile error at [2022-01-19T14:30:16.567Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master@2/kv_engine/daemon/protocol/mcbp/sasl_refresh_command_context.cc:17:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4591/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16618/ : FAILURE

Compile error at [2022-01-19T14:29:50.856Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/protocol/mcbp/sasl_step_command_context.cc:86:1:
error: expected ?}? at end of input
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16618/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16918/ : FAILURE

Compile error at [2022-01-19T14:31:15.377Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/protocol/mcbp/sasl_step_command_context.cc:86:1:
error: expected ?}? at end of input
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16918/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4649/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25034/ : FAILURE

Compile error at [2022-01-19T14:31:53.544Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/daemon/protocol/mcbp/sasl_refresh_command_context.cc:17:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25034/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17703/ : FAILURE

Compile error at [2022-01-19T14:30:12.817Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/protocol/mcbp/sasl_refresh_command_context.cc:17:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17703/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13790/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
